Universe Detail Page layout fixes
Summary:
No horizontal scroll bar on the page.
Fixing layout to remove bugs and match designer's layout recommendation.

{F1135}
{F1136}

Test Plan:
go to localhost:3000/universes/:uuid
Layout and display should match as given in the screenshot.

Reviewers: karthik, ram

Reviewed By: ram

Subscribers: eng

Differential Revision: https://phabricator.dev.yugabyte.com/D650

--- a/managed/ui/src/stylesheets/App.css
+++ b/managed/ui/src/stylesheets/App.css
@@ -376,6 +376,23 @@ ul.progress-list li i {
     padding-top: 25px;
 }
 
+
+.inline-display {
+    display: inline;
+}
+
+.map-legend-container .list-group-item{
+    padding: 5px 5px;
+    background-color: #545454;
+    margin-bottom: 2px;
+    color: white;
+}
+
+.legend-img {
+    width: 30px;
+    height: 30px;
+}
+
 .hljs {
     height: 520px;
     width: 100%;
@@ -395,4 +412,5 @@ ul.progress-list li i {
 
 #dc-config-val {
     width: 100% !important;
+
 }
